# 2d-digital-human

./: .env.example  README.md  pyproject.toml  test.py
src/: app.py  config.py  master_ui.py  model.py
src/client/: background.py  faceswap.py  liveportrait.py  qwen3_tts.py  talking_head.py
